adding navigation and burger menu for mobile device + more content

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <style>
+        #map {
+            height: 500px;
+            width: 100%;
+        }
+    </style>
   </head>
   <body>
     <app-root></app-root>
