--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
     <title>Alisée Eggermont</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
@@ -16,10 +15,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <app-root></app-root>
-    <div class="flex flex-col w-full h-full justify-center bg-[#9CA48D] items-center" id="contact">
+    <div
+      class="flex flex-col w-full h-full justify-center bg-[#9CA48D] items-center"
+      id="contact"
+    >
       <h2 class="text-2xl font-bold tracking-tight sm:text-2xl pt-16">
         Prendre rendez-vous
       </h2>
@@ -32,7 +35,9 @@
         <!-- TODO -->
         <!-- <img src="assets/logo_ffdp.png" alt="" class="h-full">
         <div id="box" class="flex justify-center h-8"><a rel="nofollow" href="https://www.psychologue.net/cabinets/alisee-eggermont?utm_source=434216&utm_medium=widget&utm_campaign=widget-company_stamp" target="_blank" ><img src="https://www.psychologue.net/stamp.xpng?com=434216&v=10" alt="Alisée EGGERMONT" class="border-0 h-full" /></a></div> -->
-        <div class="sm:flex-row flex flex-col sm:flex sm:gap-8 gap-2 items-center h-full text-sm justify-between w-full px-8">
+        <div
+          class="sm:flex-row flex flex-col sm:flex sm:gap-8 gap-2 items-center h-full text-sm justify-between w-full px-8"
+        >
           <span>© 2024 - Alisée Eggermont</span>
           <div class="sm:flex-row flex flex-col sm:gap-8 gap-2">
             <a href="/mentions"> Mentions légales </a>
@@ -43,15 +48,11 @@
     </div>
 
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        if (window.location.pathname === '/mentions') {
-          const contactDiv = document.getElementById('contact');
+      document.addEventListener("DOMContentLoaded", function () {
+        if (window.location.pathname === "/mentions") {
+          const contactDiv = document.getElementById("contact");
           if (contactDiv) {
-            contactDiv.style.display = 'none';
-          }
-          const footerDiv = document.getElementById('footer');
-          if (footerDiv) {
-            footerDiv.style.display = 'none';
+            contactDiv.style.display = "none";
           }
         }
       });
