--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Alisée Eggermont</title>
+    <meta name="description" content="Psychanalyste à Lyon 6ème."/>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,11 +27,12 @@
       <h2 class="text-2xl font-bold tracking-tight sm:text-2xl pt-16">
         Prendre rendez-vous
       </h2>
-      <div id="ie_dynamic_widget" data-base-color=""></div>
-      <script
-        type="text/javascript"
-        src="https://www.psychologue.net/widget/company_schedule?com=434216&h=ea20be21d68492090b0e60710cf4f60d&v=10&utm_source=434216&utm_medium=widget&utm_campaign=widget-company_schedule"
-      ></script>
+      <div id="ie_dynamic_widget" data-base-color="">
+        <script
+          type="text/javascript"
+          src="https://www.psychologue.net/widget/company_schedule?com=434216&h=ea20be21d68492090b0e60710cf4f60d&v=10&utm_source=434216&utm_medium=widget&utm_campaign=widget-company_schedule"
+        ></script>
+      </div>
       <div class="h-16 bg-[#ded9d5] max-h-16 w-full flex" id="footer">
         <!-- TODO -->
         <!-- <img src="assets/logo_ffdp.png" alt="" class="h-full">
@@ -40,7 +42,7 @@
         >
           <span>© 2024 - Alisée Eggermont</span>
           <div class="sm:flex-row flex flex-col sm:gap-8 gap-2">
-            <a href="/mentions"> Mentions légales </a>
+            <a href="http://www.alisee-eggermont-psy.fr/mentions"> Mentions légales </a>
             <a href="https://www.codingcorp.fr/"> Powered by Coding Corp</a>
           </div>
         </div>
